--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,3 @@
-*.exe
-*.obj
-*.out
-*.compile
-*.native
-*.byte
-*.cmo
-*.annot
-*.cmi
-*.cmx
-*.cmt
-*.cmti
-*.cma
-*.a
-*.cmxa
-*.obj
-*~
-*.annot
-*.cmj
-*.bak
-lib/bs
-*.mlast
-*.mliast
-.vscode
-.merlin
-.bsb.lock.DS_Store
-.merlin
-.bsb.lock
-npm-debug.log
-/lib/bs/
-/node_modules/
-
 ### OCaml ###
 *.annot
 *.cmo
@@ -55,3 +23,7 @@ setup.log
 
 # Merlin configuring file for Vim and Emacs
 .merlin
+
+/node_modules/
+_esy
+*.install
