--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 os: osx
 language: ocaml
 
-before_install:
+install:
   - brew install yarn
   - yarn global add esy
 
-install:
+script:
   - esy
 
 notifications:
